using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public static class MovementNames
{
    public static readonly string MoveName = "Run";
    public static readonly string JumpName = "Jump";
    public static readonly string DashName = "Dash";
    public static readonly string NullName = "";

}
